--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-</head>
-<body>
-    first
-</body>
+<html>
+    <head>
+        <meta charest="utf-8">
+        <script src=""lecture01.js"></script>
+    </head>
+    <body>
+        This is a basic HTML page
+    </body>
 </html>
