--- a/function/function.html
+++ b/function/function.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="function.js"></script>
+        <script src="function01.js"></script>
     </head>
     <body>
         function
